# server/api/routes/users.js
@@ -1,5 +1,5 @@
-const User = require("../models/User");
-const express = require("express");
+const User = require('../models/User');
+const express = require('express');
 const router = express.Router();
 var { expressjwt: jwt } = require('express-jwt');
 const jsonwebtoken = require('jsonwebtoken');
@@ -13,7 +13,35 @@ router.get('/info/:id', async (req, res) => {
 	}
 });
 
-router.post('/profile', jwt({secret: jwtSecret, algorithms: ["HS256"], credentialsRequired: true},), async (req, res) => {
+router.post('/changepassword', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
+	try {
+		const user = await User.findOne({'_id': req.auth}).exec();
+		if (user.password == req.body.oldpassword) {
+			await User.updateOne(
+				{'_id': req.auth},
+				{$set: {
+					'password': req.body.newpassword
+				}}
+			);
+			res.status(200).send();
+		} else {
+			res.status(403).send('Incorrect old password');
+		}
+	} catch (err) {
+		res.status(400).send(err.message);
+	}
+});
+
+router.get('/profile', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
+	const user = await User.findOne({'_id': req.auth}).exec();
+	if (user == null) {
+		res.status(404).send();
+	} else {
+		res.status(200).send(user);
+	}
+});
+
+router.post('/profile', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
 	try {
 		await User.updateOne(
 			{'_id': req.auth},
@@ -31,7 +59,7 @@ router.post('/profile', jwt({secret: jwtSecret, algorithms: ["HS256"], credentia
 	}
 });
 
-router.get('/profile', jwt({secret: jwtSecret, algorithms: ["HS256"], credentialsRequired: true},), async (req, res) => {
+router.get('/profile', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
 	const user = await User.findOne({'_id': req.auth}).exec();
 	if (user == null) {
 		res.status(404).send();
